tests/contract_testcases/polkadot/libraries/restrictions_08.sol

        library c {
            int x;
        }
// ---- Expect: diagnostics ----
// error: 3:13-18: library 'c' is not allowed to have contract variable 'x'
